--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Top Tourist Destinations in Alamada</title>
+  <title>Alamada Explorer</title>
   <meta charset="UTF-8">
   <meta name="author" content="Jinson Oplimo">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
