--- a/index.html
+++ b/index.html
@@ -165,6 +165,11 @@
   </div>
 </div>
 
+<div id="imageModal" class="modal">
+  <span class="close">&times;</span>
+  <img class="modal-content" id="modalFullView">
+</div>
+
 <div id="back-to-top">↑ Top</div>
 
 <script src="script/modal.js"></script>
